<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailStoryActivity">

    <ImageView
        android:id="@+id/user_story"
        android:transitionName="story"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/name"
        android:transitionName="name"
        style="@style/TextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/user_story"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Name"/>

    <TextView
        android:id="@+id/description"
        android:transitionName="@string/description"
        style="@style/TextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Description"/>

    <TextView
        android:id="@+id/posted_on"
        android:transitionName="posted"
        style="@style/TextPosted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/posted_on"/>

</androidx.constraintlayout.widget.ConstraintLayout>